--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,33 @@
-- name: Setup Bun
-  uses: oven-sh/setup-bun@v1
-  with:
-    bun-version: latest
+
+name: Octo Organization CI
+
+on:
+  push:
+    branches: [ $default-branch ]
+  pull_request:
+    branches: [ $default-branch ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Run a one-line script
+        run: echo Hello from Octo Organization
+        
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
     
-- name: Install dependencies
-  run: bun install
+      - name: Install dependencies
+        run: bun install
   
-- name: Run tests
-  run: bun test
+      - name: Run tests
+        run: bun test
   
   
   
