--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,11 @@ name: CI testing
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - '*'
 
 jobs:
   build:
