--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
-    "compilerOptions": {
-      "lib": ["ESNext"],
-      "module": "esnext",
-      "target": "esnext",
-      "moduleResolution": "node",
-      // "bun-types" is the important part
-      "types": ["bun-types"],
+	"compilerOptions": {
+		"lib": ["ESNext"],
+		"module": "esnext",
+		"target": "esnext",
+		"moduleResolution": "node",
+		// "bun-types" is the important part
+		"types": ["bun-types"],
 
-      // Custom additions
-      "allowSyntheticDefaultImports":true,
+		// Custom additions
+		"allowSyntheticDefaultImports": true,
 
-      // Local paths
-      "paths": {
-        "$src/*": ["./src/*"],
-        "$lib/*": ["./src/lib/*"],
-        "$user-context/*": ["./src/user-context/*"],
-      },
-    }
-  }
+		// Local paths
+		"paths": {
+			"$src/*": ["./src/*"],
+			"$lib/*": ["./src/lib/*"],
+			"$user-context/*": ["./src/user-context/*"]
+		}
+	}
+}
